--- a/wp-content/themes/nu-start/acf-blocks/posts-grid/posts-grid.css
+++ b/wp-content/themes/nu-start/acf-blocks/posts-grid/posts-grid.css
@@ -18,7 +18,7 @@ html :where(body:not(.wp-admin), .editor-styles-wrapper) {
   line-height: 1.375;
 }
 
-.nu_posts-grid .nu__grid .grid-item.page > a figure img, .nu_posts-grid .nu__grid .grid-item.page > a .post-title span, .nu_posts-grid .grid-item .grid-item-content, .nu_posts-grid .grid-item, .nu_posts-grid a.nu_posts-grid-readmore span, .nu_posts-grid .grid-item img {
+.nu_posts-grid .nu__grid .grid-item.page > a figure img, .nu_posts-grid .nu__grid .grid-item.page > a .post-title span, .nu_posts-grid .nu__grid .grid-item.nu_events .grid-item-content .date_time_container:after, .nu_posts-grid .grid-item .grid-item-content, .nu_posts-grid .grid-item, .nu_posts-grid a.nu_posts-grid-readmore span, .nu_posts-grid .grid-item img {
   transition: all 0.1s ease-in-out;
 }
 
@@ -658,7 +658,34 @@ body.wp-admin .nu_posts-grid .grid-item a {
 
 /* 
 
+	i.e.,
+
+	.has-24-32-font-size
+
 */
+.nu_posts-grid .nu__grid .grid-item.nu_events {
+  padding: 16px;
+}
+.nu_posts-grid .nu__grid .grid-item.nu_events > a.contains-clickable-area {
+  padding: 0;
+}
+.nu_posts-grid .nu__grid .grid-item.nu_events:hover, .nu_posts-grid .nu__grid .grid-item.nu_events:active {
+  background-color: var(--wp--preset--color--white-2);
+}
+.nu_posts-grid .nu__grid .grid-item.nu_events .is-post-type-label {
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin: 8px 0;
+}
+.nu_posts-grid .nu__grid .grid-item.nu_events .is-post-type-label:before {
+  content: "";
+  display: inline-block;
+  border: 1px solid var(--wp--preset--color--black-1);
+  border-radius: 50%;
+  width: 8px;
+  height: 8px;
+  margin: 0 16px 0 0;
+}
 .nu_posts-grid .nu__grid .grid-item.nu_events .nu__datetime {
   display: flex;
   flex-flow: column nowrap;
@@ -733,6 +760,9 @@ body.wp-admin .nu_posts-grid .grid-item a {
   border: none 0;
   display: flex;
 }
+.nu_posts-grid .nu__grid .grid-item.nu_events > a .post-title {
+  margin: 16px 0;
+}
 .nu_posts-grid .nu__grid .grid-item.nu_events > a .post-title span {
   border-bottom: 2px solid transparent;
 }
@@ -746,10 +776,39 @@ body.wp-admin .nu_posts-grid .grid-item a {
   transform: scale(1.2);
 }
 .nu_posts-grid .nu__grid .grid-item.nu_events .grid-item-content {
-  padding: 16px;
+  justify-content: center;
 }
 .nu_posts-grid .nu__grid .grid-item.nu_events .grid-item-content > :first-child {
   margin-top: 0;
+}
+.nu_posts-grid .nu__grid .grid-item.nu_events .grid-item-content .date_time_container {
+  position: relative;
+}
+.nu_posts-grid .nu__grid .grid-item.nu_events .grid-item-content .date_time_container:after {
+  content: "\e5cc";
+  font-family: "Material Icons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  line-height: inherit;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  vertical-align: middle;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  font-feature-settings: "liga";
+  -moz-font-feature-settings: "liga";
+  -moz-osx-font-smoothing: grayscale;
+}
+.nu_posts-grid .nu__grid .grid-item.nu_events .grid-item-content .date_time_container:after {
+  position: absolute;
+  top: 90%;
+  right: -8px;
+  line-height: 1;
+  transform: translateY(-50%) rotate(0deg);
 }
 
 /* 
@@ -834,6 +893,9 @@ body.wp-admin .nu_posts-grid .grid-item a {
   border: none 0;
   display: flex;
 }
+.nu_posts-grid .nu__grid .grid-item.nu_news > a .post-title {
+  margin-top: 16px;
+}
 .nu_posts-grid .nu__grid .grid-item.nu_news > a .post-title span {
   border-bottom: 2px solid transparent;
 }
@@ -849,6 +911,13 @@ body.wp-admin .nu_posts-grid .grid-item a {
 .nu_posts-grid .nu__grid .grid-item.nu_news .grid-item-content {
   padding: 16px;
   padding: 32px;
+  justify-content: center;
+}
+.nu_posts-grid .nu__grid .grid-item.nu_news .grid-item-content .is-the-publication-date {
+  justify-content: flex-end;
+}
+.nu_posts-grid .nu__grid .grid-item.nu_news .grid-item-content .is-the-publication-publisher {
+  font-style: italic;
 }
 .nu_posts-grid .nu__grid .grid-item.nu_news .grid-item-content > :first-child {
   margin-top: 0;
