--- a/wp-content/themes/nu-start/acf-blocks/posts-grid/src/_nu-events.scss
+++ b/wp-content/themes/nu-start/acf-blocks/posts-grid/src/_nu-events.scss
@@ -1,8 +1,38 @@
 /* 
 
+	i.e.,
+	
+	.has-24-32-font-size
+
 */
 
+
+
 .nu_posts-grid .nu__grid .grid-item.nu_events {
+	padding: $base-margin;
+
+	> a.contains-clickable-area {
+		padding: 0; 
+	}
+
+	&:hover, &:active {
+		background-color: var(--wp--preset--color--white-2);
+	}
+
+	.is-post-type-label {
+		text-transform: uppercase;
+		letter-spacing: 2px;
+		margin: $half-margin 0;
+		&:before {
+			content: '';
+			display: inline-block;
+			border: 1px solid var(--wp--preset--color--black-1);
+			border-radius: 50%;
+			width: 8px;
+			height: 8px;
+			margin: 0 $base-margin 0 0;
+		}
+	}
 
 	// ? the date-time block is not loading this properly idk why
 	// todo: fix this so its DRY
@@ -10,12 +40,23 @@
 		@include nu__date_time_block_styles();
 	}
 
+
+
+
+	
+	
+	
+	
+	// ! FUCK THIS CODE
 	// ? handle interaction with zooming image and underlining title
 	> a {
 		border: none 0;
 		display: flex;
-		.post-title span {
-			border-bottom: 2px solid transparent;
+		.post-title  {
+			margin: $base-margin 0; 
+			span {
+				border-bottom: 2px solid transparent;
+			}
 		}
 		&:hover,
 		&:focus {
@@ -30,9 +71,22 @@
 	}
 
 	.grid-item-content {
-		padding: $base-margin;
+		justify-content: center;
+
 		> :first-child {
 			margin-top: 0;
+		}
+
+		.date_time_container {
+			@include nu_micon("\e5cc", after);
+			&:after {
+				position: absolute;
+				top: 90%;
+				right: -$half-margin;
+				line-height: 1;
+				transform: translateY(-50%) rotate(0deg);
+				@extend %transition;
+			}
 		}
 	}
 }
