--- a/wp-content/themes/nu-start/acf-blocks/posts-grid/src/_nu-news.scss
+++ b/wp-content/themes/nu-start/acf-blocks/posts-grid/src/_nu-news.scss
@@ -3,22 +3,22 @@
 */
 
 .nu_posts-grid .nu__grid .grid-item.nu_news {
-
-
+	
 	.is-the-publication-date {
 		display: flex;
 		flex-flow: row nowrap;
 		justify-content: space-between;
 	}
-
+	
 	// ? the date-time block is not loading this properly idk why
 	// todo: fix this so its DRY
 	.nu__datetime {
 		@include nu__date_time_block_styles();
 	}
-
+	
 	// ? handle interaction with zooming image and underlining title
-	> a {
+	> a.contains-clickable-area {
+		background-color: var(--wp--preset--color--white-2); 
 		border: none 0;
 		display: flex;
 		.post-title {
