--- a/wp-content/themes/nu-start/acf-blocks/posts-grid/src/_nu-events.scss
+++ b/wp-content/themes/nu-start/acf-blocks/posts-grid/src/_nu-events.scss
@@ -9,15 +9,28 @@
 
 
 .nu_posts-grid .nu__grid .grid-item.nu_events {
-	padding: $base-margin;
-
 	> a.contains-clickable-area {
 		padding: 0; 
+		@include nu_micon("\e5cc", after);
+		&:after {
+			position: absolute;
+			// top: 90%;
+			bottom: $base-margin; 
+			right: $base-margin; 
+			line-height: 1;
+			// transform: translateY(-50%) translateX(-20px);
+			@extend %transition;
+		}
+		&:hover, &:active {
+			background-color: var(--wp--preset--color--white-2);
+		}
+		.grid-item-content {
+		
+			justify-content: center;
+	
+		}
 	}
 
-	&:hover, &:active {
-		background-color: var(--wp--preset--color--white-2);
-	}
 
 	.is-post-type-label {
 		text-transform: uppercase;
@@ -70,23 +83,5 @@
 		}
 	}
 
-	.grid-item-content {
-		justify-content: center;
 
-		> :first-child {
-			margin-top: 0;
-		}
-
-		.date_time_container {
-			@include nu_micon("\e5cc", after);
-			&:after {
-				position: absolute;
-				top: 90%;
-				right: -$half-margin;
-				line-height: 1;
-				transform: translateY(-50%) rotate(0deg);
-				@extend %transition;
-			}
-		}
-	}
 }
