--- a/wp-content/themes/nu-start/__precomp/source/css/frontend/src/_site-logo.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/frontend/src/_site-logo.scss
@@ -19,11 +19,12 @@ footer {
             img {
                 display: block;
                 max-height: 100%;
+                max-width: 220px;
             }
 			svg {
 				display: block;
 				min-height: 100%;
-				
+                max-width: 220px;
 			}
         }
         &.logo--text {
