includes important updates for framework
nu-starter.php
header.php

dark header incoming
(should be on a feature branch)

--- a/wp-content/themes/nu-start-child/src/styles/src/_hotfixing.scss
+++ b/wp-content/themes/nu-start-child/src/styles/src/_hotfixing.scss
@@ -68,6 +68,7 @@ header.header > .container {
       position: relative;
       > .wp-block-group {
         padding: $margin_4x;
+        padding-bottom: 0;
         transform: translateX(-$margin_4x);
       }
     }
