--- a/wp-content/themes/nu-start/__precomp/source/css/_overrides/src/_hotfixing.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/_overrides/src/_hotfixing.scss
@@ -7,6 +7,13 @@
 	}
 }
 
+
+body.single-nu_partnerships {
+	.blocks--wrapper > .wp-block-group.alignfull:first-child {
+		margin-top: 0;
+	}
+}
+
 .wp-block-eedee-block-gutenslider.the-timeline-slider {
 	// handle adjustments to the arrows; they "wrap" the year
 	.eedee-gutenslider-nav {
