--- a/wp-content/themes/nu-start/__precomp/source/css/frontend/src/_site-logo.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/frontend/src/_site-logo.scss
@@ -16,14 +16,11 @@ footer {
 			display: block;
             max-width: 300px;
 			width: 100%;
-            img {
-                display: block;
-                max-height: 100%;
-            }
+            img,
 			svg {
 				display: block;
 				min-height: 100%;
-				
+                max-width: 220px;
 			}
         }
         &.logo--text {
