--- a/wp-content/themes/nu-start/__precomp/source/css/_overrides/src/_hotfixing.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/_overrides/src/_hotfixing.scss
@@ -15,6 +15,9 @@ body.single-nu_partnerships {
 }
 
 .wp-block-eedee-block-gutenslider.the-timeline-slider {
+	.slide-content {
+		padding: 0 !important;
+	}
 	// handle adjustments to the arrows; they "wrap" the year
 	.eedee-gutenslider-nav {
 		transform: translateY(-50%);
@@ -24,6 +27,7 @@ body.single-nu_partnerships {
 			right: 0 !important;
 			left: auto !important;
 		}
+		
 	}
 	// handle adjustments to the bullets - they become a timeline!
 	.eedee-gutenslider-pagination.swiper-pagination-bullets {
