--- a/wp-content/themes/nu-start/acf-blocks/posts-grid/posts-grid.css
+++ b/wp-content/themes/nu-start/acf-blocks/posts-grid/posts-grid.css
@@ -972,6 +972,20 @@ body.wp-admin .nu_posts-grid .grid-item a {
   }
 }
 
+@media (min-width: 1024px) {
+  .nu_posts-grid .nu_profiles.grid-item.has-layout-horizontal > .contains-clickable-area > figure,
+.nu_posts-grid .nu_profiles.grid-item.has-layout-horizontal > figure {
+    flex: 1 0 66%;
+    max-width: none;
+    max-height: 320px;
+    order: 2;
+  }
+  .nu_posts-grid .nu_profiles.grid-item.has-layout-horizontal > .contains-clickable-area .grid-item-content,
+.nu_posts-grid .nu_profiles.grid-item.has-layout-horizontal .grid-item-content {
+    justify-content: center;
+  }
+}
+
 li.grid-item.broken:only-child {
   flex: 1 0 100% !important;
   width: 100% !important;
