--- a/wp-content/themes/nu-start/acf-blocks/posts-grid/src/_grid.scss
+++ b/wp-content/themes/nu-start/acf-blocks/posts-grid/src/_grid.scss
@@ -248,6 +248,7 @@ body.wp-admin {
 @import "./grid-item-template-styles/is-page";
 @import "./grid-item-template-styles/is-initiative";
 @import "./grid-item-template-styles/is-project";
+@import "./grid-item-template-styles/is-profile";
 
 li.grid-item.broken {
 	&:only-child {
