working thru the svg marks pages

--- a/wp-content/themes/nu-start/__precomp/source/css/_overrides/src/_hotfixing.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/_overrides/src/_hotfixing.scss
@@ -14,6 +14,7 @@
 
 @import './brand-tweaks/accordion';
 @import './brand-tweaks/flip-cards';
+@import './brand-tweaks/html-svgs';
 
 .wp-block-group.is-spillover-magazine-layout {
 	@include media(">=medium") {
