--- a/wp-content/themes/nu-start/__precomp/source/css/frontend/src/_basic-page-layout.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/frontend/src/_basic-page-layout.scss
@@ -45,7 +45,7 @@ body {
 			margin-top: 0;
 		}
 	}
-	> :last-child:not(.alignfull.has-background) {
+	> :last-child:not(.alignfull) {
 		margin-bottom: $margin_8x;
 	}
 
