--- a/wp-content/themes/nu-start/__precomp/source/css/_overrides/src/_hotfixing.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/_overrides/src/_hotfixing.scss
@@ -7,6 +7,46 @@
 	}
 }
 
+
+body.single-nu_partnerships {
+	.blocks--wrapper > .wp-block-group.alignfull:first-child {
+		margin-top: 0;
+	}
+}
+
+.wp-block-eedee-block-gutenslider.the-timeline-slider {
+	.slide-content {
+		padding: 0 !important;
+	}
+	// handle adjustments to the arrows; they "wrap" the year
+	.eedee-gutenslider-nav {
+		transform: translateY(-50%);
+		&.eedee-gutenslider-prev {
+		}
+		&.eedee-gutenslider-next {
+			right: 0 !important;
+			left: auto !important;
+		}
+		
+	}
+	// handle adjustments to the bullets - they become a timeline!
+	.eedee-gutenslider-pagination.swiper-pagination-bullets {
+		width: 100%;
+		border-bottom: 1px solid var(--wp--preset--color--white-2);
+		.swiper-pagination-bullet {
+			width: auto;
+			height: auto;
+			margin: 0 0 0 $base-margin;
+			background-color: transparent;
+			&:first-child {
+				margin: 0 0 0 0;
+			}
+			&.swiper-pagination-bullet-active {
+			}
+		}
+	}
+}
+
 // ! FIX ALL OF THIS WHAT IS THIS OMG
 
 .nu_section--similar-events {
@@ -129,63 +169,6 @@ figure.wp-block-embed {
 	&:focus {
 		iframe {
 			@include nu__boxshadow(4);
-		}
-	}
-}
-
-.nu__pattern--event-item-hero {
-	@include media(">=small") {
-		.wp-block-cover {
-			.wp-block-cover__inner-container {
-				margin-left: $margin_8x !important;
-			}
-	
-			h2 {
-				max-width: 720px;
-			}
-		}
-		> .nu__pattern--event-item-hero-spillover {
-			> .wp-block-group.has-background {
-				margin-top: -$margin_4x;
-				z-index: 1;
-				position: relative;
-			}
-		}
-	}
-}
-
-.nu__shim--columns-are-cards-and-centered {
-	> .wp-block-columns > .wp-block-column {
-		display: flex;
-		flex-flow: column nowrap;
-		justify-content: center;
-		> p {
-			margin: 0;
-		}
-	}
-}
-
-.wp-block-group.nu__pattern--hero-type-a {
-	@include media(">=small") {
-		.wp-block-cover {
-			.wp-block-cover__inner-container {
-				margin-left: $margin_8x !important;
-			}
-
-			h2 {
-				max-width: 720px;
-			}
-		}
-
-		> .nu__pattern--hero-type-a-spillover {
-			margin-top: -$margin_4x;
-			z-index: 1;
-			position: relative;
-			> .wp-block-group {
-				max-width: 70%;
-				margin-left: $margin_4x !important;
-				padding: $margin_4x;
-			}
 		}
 	}
 }
