quick cleanup - about to upgrade parent but not child

--- a/wp-content/themes/nu-start-child/src/styles/gutenslider-overrides/_misc-elements.scss
+++ b/wp-content/themes/nu-start-child/src/styles/gutenslider-overrides/_misc-elements.scss
@@ -1,3 +1,16 @@
+
+
+.page-title-is-hidden-while-playing {
+	position: absolute;
+	top: 50%;
+	right: 10%;
+	transform: translate(0, -50%);
+	color: white;
+	z-index: 1;
+	max-width: 640px !important;
+}
+
+
 .academic-plan-timeline-table {
   &:first-child {
     margin-top: $margin_4x;
